welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:6: error: type mismatch;
 found   : Int
 required: Boolean
	if (nbBiscuit<<2) {droite()}
                     ^